--- a/BeMyValentines.html
+++ b/BeMyValentines.html
@@ -83,8 +83,8 @@
     <!-- FRONT PAGE GIF -->
     <img
       class="gif"
-      src="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif"
-      alt="Cute love gif"
+      src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYzBqdXh5ZnkzdHp3eTE1aHFocHM0amZ0bG5jampndGx5a3RqdmQ4MyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/5b3N5hXaERPgGV764K/giphy.gif"
+      alt="question gif"
     />
 
     <div class="hearts">💖 💕 💘</div>
@@ -118,3 +118,4 @@
   </script>
 </body>
 </html>
+
